[metadata]
name = llspy
description = Lattice Light Sheet Processing Tools
author = Talley Lambert
author_email = talley.lambert@gmail.com
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
url = https://github.com/tlambert03/LLSpy2
license = BSD 3-clause
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    tifffile
    numba
    voluptuous
    click
    watchdog
    qtpy
    matplotlib
    spimagine
    parse
    gputools
    sentry-sdk

[options.package_data]
* = *.ini, *.ui, *.png

[options.packages.find]
exclude =
    tests
    docs
    pyinstaller

[options.entry_points]
console_scripts =
    lls = llspy.bin.llspy_cli:cli
    lls-gui = llspy.bin.llspy_gui:main
