[metadata]
name = llspy
description = Lattice Light Sheet Processing Tools
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/tlambert03/LLSpy2
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD 3-clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
install_requires =
    click
    gputools
    llspy-slm>=0.2.1
    matplotlib
    numba
    numpy
    parse
    qtpy
    scipy
    sentry-sdk
    spimagine
    tifffile
    voluptuous
    watchdog
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    docs
    pyinstaller

[options.entry_points]
console_scripts =
    lls = llspy.bin.llspy_cli:cli
    lls-gui = llspy.bin.llspy_gui:main

[options.extras_require]
tests =
    PyQt5
    pytest
    pytest-cov
    pytest-qt

[options.package_data]
* = *.ini, *.ui, *.png

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,conf.py
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503, E501, E203, E741

[isort]
profile = black
src_paths = llspy
