[metadata]
name = llspy
description = Lattice Light Sheet Processing Tools
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/tlambert03/LLSpy
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = BSD 3-clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
install_requires =
    click
    llspy-slm>=0.2.1
    matplotlib
    numpy
    parse
    qtpy
    scipy
    sentry-sdk
    tifffile
    voluptuous
    watchdog
    numba;python_version < '3.12'
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    docs
    pyinstaller

[options.entry_points]
console_scripts =
    lls = llspy.bin.llspy_cli:cli
    lls-gui = llspy.bin.llspy_gui:main

[options.extras_require]
napari =
    napari
pyqt =
    PyQt5
pyside =
    PySide2
spimagine =
    spimagine
test =
    PyQt5
    pytest
    pytest-cov
    pytest-qt

[options.package_data]
* = *.ini, *.ui, *.png

[bdist_wheel]
universal = 1
